# selenium-parallel-execution-framework

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: selenium-ci.yml
scripts/: sandbox.py
src/framework/components/: base_page.py
src/framework/core/: config.py  factory.py  protocols.py
src/framework/data/: factory.py
src/framework/pages/: home_page.py
tests/: conftest.py
tests/web/: test_parallel.py
web_tests/: conftest.py  test_parallel.py
web_tests/pages/: home_page.py
